@@ -96,7 +96,8 @@ wxMotif:
   with Motif 1.x compatibility
 - implemented wxToggleButton
 - made wxButton a bit smaller by default
-
+- wxRadioBox and wxStaticBox now use the default shadow (border) style
+  instead of 
 wxUniv:
 
 - Controls in toolbars now supported.
